Fixes the most annoying bug where a small gap appeared below the map due to weird line-height stuff.

--- a/app/styles/charts.scss
+++ b/app/styles/charts.scss
@@ -54,11 +54,14 @@ body {
   // position: fixed;
   top: 0;
   width: 100%;
+  font-size: 0;
+  line-height: 100%;
   background: $color4;
   z-index: 1;
   & > svg {
     width: 100%;
     // height: 100%;
+    line-height: 100%;
   }
 }
 path {
